--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -99,7 +99,32 @@ jobs:
       #   with:
       #     action: "stop"
 
-      - name: Codecov Upload
-        uses: codecov/codecov-action@v3.1.0
+      # - name: Codecov Upload
+      #   uses: codecov/codecov-action@v3.1.0
+      #   with:
+      #     fail_ci_if_error: false
+
+      - name: Produce the coverage report
+        uses: insightsengineering/coverage-action@v2
         with:
-          fail_ci_if_error: false
+          # Path to the Cobertura XML report.
+          path: .\appveyor\coverage.xml
+          # Minimum total coverage, if you want to the
+          # workflow to enforce it as a standard.
+          # This has no effect if the `fail` arg is set to `false`.
+          threshold: 80.123
+          # Fail the workflow if the minimum code coverage
+          # reuqirements are not satisfied.
+          fail: false
+          # Publish the rendered output as a PR comment
+          publish: true
+          # Create a coverage diff report.
+          diff: true
+          # Branch to diff against.
+          # Compare the current coverage to the coverage
+          # determined on this branch.
+          diff-branch: main
+          # This is where the coverage reports for the
+          # `diff-branch` are stored.
+          # Branch is created if it doesn't already exist'.
+          diff-storage: _xml_coverage_reports
