try try try try

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -89,15 +89,6 @@ jobs:
           sql-instance: ${{ env.SQLINSTANCE }}
           database: ${{ env.DATABASE }}
 
-      # - name: Run tests
-      #   run: |
-      #     Invoke-Pester -Path ".\tests\*"
-
-      # - name: Stop SQLCover
-      #   uses: ./.github\actions\sqlcover
-      #   with:
-      #     action: "stop"
-
       # - name: Codecov Upload
       #   uses: codecov/codecov-action@v3.1.0
       #   with:
@@ -106,7 +97,6 @@ jobs:
       - name: Produce the coverage report
         uses: insightsengineering/coverage-action@v2
         with:
-          # Path to the Cobertura XML report.
           path: "cobertura.xml"
           # Minimum total coverage, if you want to the
           # workflow to enforce it as a standard.
@@ -119,11 +109,14 @@ jobs:
           publish: true
           # Create a coverage diff report.
           diff: true
-          # Branch to diff against.
-          # Compare the current coverage to the coverage
-          # determined on this branch.
           diff-branch: main
           # This is where the coverage reports for the
           # `diff-branch` are stored.
           # Branch is created if it doesn't already exist'.
           diff-storage: _xml_coverage_reports
+
+      - name: Create HTML coverage artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: html-coverage
+          path: coverage.html
