--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,7 +1,6 @@
 ---
 #TODO:
 # Add sample sp_doc output as artifact
-# Add code coverage / sqlcover
 # See if pester files can be consolidated
 # Fix broken appveyor for older versions
 # Add SQL 2017 to github runner - https://github.com/potatoqualitee/mssqlsuite/issues/16
@@ -89,33 +88,24 @@ jobs:
           sql-instance: ${{ env.SQLINSTANCE }}
           database: ${{ env.DATABASE }}
 
-      # - name: Codecov Upload
-      #   uses: codecov/codecov-action@v3.1.0
-      #   with:
-      #     fail_ci_if_error: false
-
       - name: Produce the coverage report
         uses: insightsengineering/coverage-action@v2
         with:
           path: "cobertura.xml"
-          # Minimum total coverage, if you want to the
-          # workflow to enforce it as a standard.
-          # This has no effect if the `fail` arg is set to `false`.
-          threshold: 80.123
-          # Fail the workflow if the minimum code coverage
-          # reuqirements are not satisfied.
+          threshold: 90
           fail: false
-          # Publish the rendered output as a PR comment
           publish: true
-          # Create a coverage diff report.
           diff: true
           diff-branch: main
-          # This is where the coverage reports for the
-          # `diff-branch` are stored.
-          # Branch is created if it doesn't already exist'.
           diff-storage: _xml_coverage_reports
 
       - name: Create HTML coverage artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: html-coverage
+          path: coverage.html
+
+      - name: Create sample sp_doc artifact
         uses: actions/upload-artifact@v3
         with:
           name: html-coverage
