--- a/.github/actions/tsqlt/action.yml
+++ b/.github/actions/tsqlt/action.yml
@@ -20,8 +20,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - id: output
-      shell: pwsh
+    - shell: pwsh
       run: |
         Write-Output "Getting variables."
 
