--- a/.github/workflows/azuresql-unit.yml
+++ b/.github/workflows/azuresql-unit.yml
@@ -55,7 +55,7 @@ jobs:
       - uses: azure/sql-action@v1.3
         with:
           connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
-          sql-file: ${{ env.Env:INSTALLER_FILE }}
+          sql-file: ${{ env.INSTALLER_FILE }}
 
       # - name: Install tSQLt
       #   uses: ./.github/actions/tsqlt
