--- a/.github/workflows/azuresql-unit.yml
+++ b/.github/workflows/azuresql-unit.yml
@@ -24,6 +24,7 @@ env:
   SQLINSTANCE: "localhost"
   DATABASE: "tsqlt"
   INSTALLER_FILE: "install_dba-multitool.sql"
+  TSQLT_FILE: "run_tsqlt.sql"
 
 jobs:
   integration:
@@ -41,22 +42,29 @@ jobs:
         with:
           path: ""
 
-      - name: Install and cache PowerShell modules
-        uses: potatoqualitee/psmodulecache@v4.5
-        with:
-          modules-to-cache: dbatools
-          shell: powershell
-
       - name: Create installer script
         run: |
           Get-ChildItem -Path "." -Filter "sp_*.sql" | Get-Content | Out-File $Env:INSTALLER_FILE -Encoding ascii
           Get-ChildItem -Path "." -Filter $Env:INSTALLER_FILE
 
-      - uses: azure/sql-action@v1.3
+      - name: Create tsqlt runner script
+        run: |
+          New-Item -Path $Env:TSQLT_FILE -ItemType "File" -Value "EXEC tsqlt.RunAll;" -Force
+
+      - name: Install multitool
+        uses: azure/sql-action@v1.3
         with:
           connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
           sql-file: ${{ env.INSTALLER_FILE }}
 
+      - name: Run tSQLt tests
+        uses: azure/sql-action@v1.3
+        with:
+          connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
+          sql-file: ${{ env.TSQLT_FILE }}
+
+      # Since database is re-used, assume tSQLt already exists in
+      # Azure SQL database
       # - name: Install tSQLt
       #   uses: ./.github/actions/tsqlt
       #   with:
