--- a/.github/workflows/bundled-installer.yml
+++ b/.github/workflows/bundled-installer.yml
@@ -36,7 +36,8 @@ jobs:
           Get-ChildItem -Path $Env:GITHUB_WORKSPACE -Filter $Env:INSTALLER_FILE
 
       - name: Commit bundled installer
-        uses: stefanzweifel/git-auto-commit-action@4.14.1
+        uses: stefanzweifel/git-auto-commit-action@v4.14.1
         with:
           commit_message: Updated bundled installer
           file_pattern: "*.sql"
+          path: ${{ env.GITHUB_WORKSPACE }}
