--- a/.github/workflows/azuresql-unit.yml
+++ b/.github/workflows/azuresql-unit.yml
@@ -30,6 +30,9 @@ jobs:
   integration:
     runs-on: ubuntu-latest
     name: azuresql
+    defaults:
+      run:
+        shell: pwsh
 
     steps:
       - name: Check out code
@@ -38,7 +41,6 @@ jobs:
           path: ""
 
       - name: Create installer script
-        shell: pwsh
         run: |
           Get-ChildItem -Path $Env:GITHUB_WORKSPACE -Filter "sp_*.sql" | Get-Content | Out-File $Env:INSTALLER_FILE -Encoding ascii
           Get-ChildItem -Path $Env:GITHUB_WORKSPACE -Filter $Env:INSTALLER_FILE
